manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82022512exam3-cloud-sample 
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82022512exam3-cloud-sample 
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: cloud-sample-volume
            readOnly: false
            subPath: cloud-sample
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: cloud-sample-volume
        persistentVolumeClaim:
          claimName: cepg-aa-pvc
      - name: application-properties
        configMap:
          name: cloud-sample-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
